fix: port the MavenInvoker process cleanup to Java 8 APIs
The MavenInvoker rework merged in #480 uses ProcessHandle, List.of and
@Deprecated(since), which do not exist on Java 8. The cleanup now uses
Process.destroy/destroyForcibly with a timed waitFor, keeping the
hang-hardening semantics. Descendant processes cannot be enumerated on
Java 8, so only the process itself is terminated; children are expected
to end with their parent.